Fix footer covering more filters

--- a/assets/scss/modules/_our-devisers.scss
+++ b/assets/scss/modules/_our-devisers.scss
@@ -88,5 +88,5 @@
     font-size: 16px;
 }
 .filter-wrapper{
-margin: 30px 0 0 0;
+	margin: 30px 0 150px 0;
 }
