--- a/web/css/desktop/public-2/application.css
+++ b/web/css/desktop/public-2/application.css
@@ -2001,7 +2001,7 @@ input[type="radio"] .styled:checked + label::after {
   font-size: 16px; }
 
 .filter-wrapper {
-  margin: 30px 0 0 0; }
+  margin: 30px 0 150px 0; }
 
 /*.col-xs-15,
 .col-sm-15,
